--- a/css/estilos.css
+++ b/css/estilos.css
@@ -9,3 +9,28 @@ body {
 	font-size: 16px;
 	background: #4a465b;
 }
+
+.contenedor {
+	width: 90%;
+	max-width: 1000px;
+	margin: 20px auto;
+	overflow: hidden;
+}
+
+header {
+	background: #fff;
+}
+
+header nav {
+	width: 100%;
+}
+
+header nav ul {
+	width: 100%;
+	overflow: hidden;
+	list-style: none;
+}
+
+header nav ul li {
+	float: left;
+}
