--- a/css/estilos.css
+++ b/css/estilos.css
@@ -34,3 +34,15 @@ header nav ul {
 header nav ul li {
 	float: left;
 }
+
+header nav ul li a {
+	text-decoration: none;
+	display: inline-block;
+	padding: 15px 20px;
+	color: #000;
+}
+
+header nav ul li a:hover {
+	background: #000;
+	color: #fff;
+}
