--- a/css/estilos.css
+++ b/css/estilos.css
@@ -53,6 +53,16 @@ header nav ul li a:hover {
 	float: left;
 }
 
+.main .imagen {
+	width: 100%;
+}
+
+.main .imagen img {
+	width: 100%;
+	height: 700px;
+	vertical-align: top;
+}
+
 .main .posts {
 	padding: 40px;
 }
